--- a/about.html
+++ b/about.html
@@ -563,8 +563,7 @@
 
 
         <!--Start of chatway Script-->
-        <!-- <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=nHz2c1Z8Wt7U"></script> -->
-        <!--End of jivo Script-->
+        <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=YD4Lg4vxf3ri"></script>
         <script src="assetss/js/jquery.min.js"></script>
         <script src="assetss/js/bootstrap.bundle.min.js"></script>
         <script src="assetss/js/form-validator.min.js"></script>
