--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 
     <a href="javascript:void(0)" class="back-to-top bounce"><i class="ri-arrow-up-s-line"></i></a>
     <!--Start of chatway Script-->
-    <!-- <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=nHz2c1Z8Wt7U"></script> -->
+    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=YD4Lg4vxf3ri"></script>
 
     <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.html"></script>
     <script src="assetss/js/jquery.min.js"></script>
