--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -529,7 +529,7 @@
     <a href="javascript:void(0)" class="back-to-top bounce"><i class="ri-arrow-up-s-line"></i></a>
 
     <!--Start of chatway Script-->
-    <!-- <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=nHz2c1Z8Wt7U"></script> -->
+    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=YD4Lg4vxf3ri"></script>
 
     <script src="assetss/js/jquery.min.js"></script>
     <script src="assetss/js/bootstrap.bundle.min.js"></script>
